# z-engine

./: CMakeLists.txt  README.md
cmake/: build_types.cmake  constants.cmake  globals.cmake  libs.cmake  platform.cmake
src/core/: core.cmake  module.cmake
src/core/private/: zero.cpp
src/core/private/zero/core/: zero.cpp
src/core/private/zero/core/app/: Application.cpp
src/core/private/zero/core/async/: BaseLock.cpp  Mutex.cpp  SpinLock.cpp
src/core/private/zero/core/ecs/: ecs.cpp
src/core/private/zero/core/ecs/systems/: System.cpp  SystemsManager.cpp
src/core/private/zero/core/engine/: Engine.cpp  EngineProvider.cpp
src/core/private/zero/core/game/: Game.cpp
src/core/private/zero/core/graphics/: Graphics.cpp  GraphicsProvider.cpp
src/core/private/zero/core/memory/: MemoryManager.cpp  SharedPointer.cpp
src/core/private/zero/core/metrics/log/: Log.cpp
src/core/public/: zero.hpp
src/core/public/zero/core/: zero.hpp
src/core/public/zero/core/app/: Application.hpp
src/core/public/zero/core/async/: BaseLock.hpp  ILock.hxx  IMutex.hxx  ISharedMutex.hxx  Mutex.hpp  SpinLock.hpp
src/core/public/zero/core/configs/: zero_api.hpp  zero_atomic.hpp  zero_debug.hpp  zero_map.hpp  zero_memory.hpp  zero_mutex.hpp  zero_numeric.hpp  zero_platform.hpp  zero_types.hpp  zero_vector.hpp
src/core/public/zero/core/ecs/: ecs.hpp
src/core/public/zero/core/ecs/systems/: ISystem.hxx  System.hpp  SystemsManager.hpp
src/core/public/zero/core/ecs/types/: IDStorage.hpp  types.hpp
src/core/public/zero/core/engine/: Engine.hpp  EngineProvider.hpp  IEngine.hxx
src/core/public/zero/core/game/: Game.hpp  IGame.hxx
src/core/public/zero/core/graphics/: Graphics.hpp  GraphicsProvider.hpp  IGraphics.hxx
src/core/public/zero/core/memory/: IAllocator.hxx  MemoryManager.hpp  SharedPointer.hpp
src/core/public/zero/core/metrics/log/: ELogLevel.hpp  ILogger.hxx  Log.hpp
src/windows/: module.cmake
src/windows/private/zero/windows/: zero_win.cpp
src/windows/public/zero/windows/: zero_win.hpp
